--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,10 @@
 <p>
   <strong>Avatar:</strong>
   <% if @user.avatar.attached? %>
+    <h2>original size</h2>
     <%= image_tag @user.avatar %>
+    <h2>50x50 size</h2>
+    <%= image_tag @user.avatar.variant(resize: "50x50") %>
   <% end %>
 </p>
 
