--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,13 +2,13 @@
 
 <h1>Users</h1>
 
-<div id="users">
+<div id="users" class="mb-6 mt-2">
   <% @users.each do |user| %>
     <%= render user %>
-    <p>
-      <%= link_to "Show this user", user %>
+    <p class="mb-2">
+      <%= link_to "Show this user", user, { class: "underline" } %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New user", new_user_path %>
+<%= link_to "New user", new_user_path, { class: "ml-1 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" }%>
