--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Dashboard#index</h1>
-<p><%= Time.zone.now %></p>
+<p>index controller start at <%= @index_at %></p>
 
 <h2>Users</h2>
 <%= render partial: 'users'%>
 <h2>Books</h2>
 <%= render partial: 'books' %>
+
+<p>rendered index at <%= Time.zone.now %></p>
