--- a/app/views/habits/show.html.erb
+++ b/app/views/habits/show.html.erb
@@ -1,4 +1,9 @@
-<div>
-  <h1 class="font-bold text-4xl">Habits#show</h1>
-  <p>Find me in app/views/habits/show.html.erb</p>
+<div class="text-center font-bold text-gray-700" id="habit-name">
+  <%= @habit.name %>
+</div>
+
+<div class="mt-3 flex justify-center items-center space-x-5">
+  <%= button_to '-', '#', class: 'btn bg-red-300 inline-block shadow-lg' %>
+  <div class="text-4xl font-bold"><%= @habit.count %></div>
+  <%= button_to '+', '#', class: 'btn bg-green-300 inline-block shadow-lg' %>
 </div>
