--- a/app/views/habits/show.html.erb
+++ b/app/views/habits/show.html.erb
@@ -1,9 +1,19 @@
-<div class="text-center font-bold text-gray-700" id="habit-name">
-  <%= @habit.name %>
-</div>
+  <div class="text-center font-bold text-gray-700" id="habit-name">
+    <%= @habit.name %>
+  </div>
 
-<div class="mt-3 flex justify-center items-center space-x-5">
-  <%= button_to '-', '#', class: 'btn bg-red-300 inline-block shadow-lg' %>
-  <div class="text-4xl font-bold"><%= @habit.count %></div>
-  <%= button_to '+', '#', class: 'btn bg-green-300 inline-block shadow-lg' %>
-</div>
+<%= turbo_frame_tag @habit do %>
+  <div class="mt-3 flex justify-center items-center space-x-5">
+    <%= button_to '-', minus_habit_path(@habit), class: 'btn bg-red-300 inline-block shadow-lg' %>
+    <div class="text-4xl font-bold">
+      <div id="habit-count">
+        <%= @habit.count %>
+      </div>
+    </div>
+    <%= button_to '+', plus_habit_path(@habit), class: 'btn bg-green-300 inline-block shadow-lg' %>
+  </div>
+
+  <div class="mt-3 p-2 flex justify-center space-x-2">
+    <%= render 'habit_markers', habit: @habit %>
+  </div>
+<% end %>
